--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
     "packages/*"
   ],
   "dependencies": {
+    "@types/cors": "^2.8.17",
     "@types/express": "^5.0.1",
     "@types/ioredis": "^4.28.10",
     "@types/nodemailer": "^6.4.17",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "ioredis": "^5.6.0",
